# test-codecov

./: pyproject.toml
.github/workflows/: test.yml  test2.yml
tests/: test.py  test2.py
ttt/: __init__.py  ttt.py
